[gd_scene load_steps=33 format=2]

[ext_resource path="res://menu_principal.gd" type="Script" id=1]
[ext_resource path="res://assets/back_7.png" type="Texture" id=2]
[ext_resource path="res://assets/back_0.png" type="Texture" id=3]
[ext_resource path="res://assets/back_2.png" type="Texture" id=4]
[ext_resource path="res://assets/flying_dragon-gold 2.png" type="Texture" id=5]
[ext_resource path="res://assets/flying_dragon-gold 1.png" type="Texture" id=6]
[ext_resource path="res://assets/flying_dragon-gold 3.png" type="Texture" id=7]
[ext_resource path="res://assets/castledell.png" type="Texture" id=8]
[ext_resource path="res://assets/botao jogar esc.png" type="Texture" id=9]
[ext_resource path="res://assets/botao jogar1.png" type="Texture" id=10]
[ext_resource path="res://assets/botao configurações1.png" type="Texture" id=11]
[ext_resource path="res://assets/botao configurações esc.png" type="Texture" id=12]
[ext_resource path="res://assets/botao sair1.png" type="Texture" id=13]
[ext_resource path="res://assets/botao sair esc.png" type="Texture" id=14]
[ext_resource path="res://medieval sound.mp3" type="AudioStream" id=15]
[ext_resource path="res://assets/back_3.png" type="Texture" id=16]
[ext_resource path="res://assets/back_4.png" type="Texture" id=17]
[ext_resource path="res://assets/flying_dragon-gold.png" type="Texture" id=18]
[ext_resource path="res://assets/back_5.png" type="Texture" id=19]
[ext_resource path="res://assets/back_6.png" type="Texture" id=20]
[ext_resource path="res://assets/back_8.png" type="Texture" id=21]
[ext_resource path="res://assets/back_13.png" type="Texture" id=22]
[ext_resource path="res://assets/back_14.png" type="Texture" id=23]
[ext_resource path="res://assets/back_10.png" type="Texture" id=24]
[ext_resource path="res://assets/back_11.png" type="Texture" id=25]
[ext_resource path="res://assets/back_12.png" type="Texture" id=26]
[ext_resource path="res://assets/back_9.png" type="Texture" id=27]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 2 ), ExtResource( 21 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="LargeTexture" id=3]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=6]
resource_name = "dragão"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 11 ]
}

[node name="Node2D" type="Node2D"]
position = Vector2( 0, -36 )
scale = Vector2( 0.802981, 0.807698 )
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = 10.0
autoplay = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 954.032, 578.805 )
scale = Vector2( 1.01176, 1.00537 )
frames = SubResource( 4 )
frame = 11
playing = true

[node name="Castledell" type="Sprite" parent="."]
position = Vector2( 532.423, 170.385 )
scale = Vector2( 1.25978, 1.27257 )
texture = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 159.406, 489.044 )
scale = Vector2( 2.50485, 2.0098 )
frames = SubResource( 1 )
frame = 2
playing = true

[node name="play_button" type="TextureButton" parent="."]
margin_left = 783.331
margin_top = 449.272
margin_right = 1055.33
margin_bottom = 518.272
rect_scale = Vector2( 1.27532, 1.59339 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="config_button" type="TextureButton" parent="."]
margin_left = 783.331
margin_top = 590.272
margin_right = 1055.33
margin_bottom = 659.272
rect_scale = Vector2( 1.27987, 1.5894 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_focused = SubResource( 3 )
expand = true
stretch_mode = 6

[node name="quit_button" type="TextureButton" parent="."]
margin_left = 784.331
margin_top = 729.272
margin_right = 1056.33
margin_bottom = 798.272
rect_scale = Vector2( 1.27161, 1.61799 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
expand = true
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
"anims/dragão" = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 493.162, 775.042 )
scale = Vector2( 1.24536, 1.23809 )
texture = ExtResource( 18 )
hframes = 3
vframes = 4
frame = 2
__meta__ = {
"_edit_group_": true
}

[connection signal="pressed" from="play_button" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="config_button" to="." method="_on_config_button_mouse_entered"]
[connection signal="pressed" from="config_button" to="." method="_on_config_button_pressed"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
